--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <body>
 <h1>Discover hidden places in the world around you</h1>
 <p>Download Excursion (Coming soon!)</p>
-<img src=""/>
+<video controls autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
+</video>
 
 <h2>Your personal travel guide</h2>
 <p>Excursion remebers places you like, and recommends new points of interest around you.</p>
-<img src=""/>
-<img src=""/>
+<img src="./resources/images/camp.jpg"/>
+<img src="./resources/images/phone.png"/>
 <h2>Coming Soon for iPhone and Android</h2>
 <p>Downlad Excursion (Coming soon!)</p>
 </body>
