--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Discover hidden places in the world around you</h1>
 <p>Download Excursion (Coming soon!)</p>
-<video controls autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
+<video autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
 </video>
 
 <h2>Your personal travel guide</h2>
