--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Discover hidden places in the world around you</h1>
-<p>Download Excursion (Coming soon!)</p>
+<p><div id="download">Download Excursion (Coming soon!)<div></p>
 <video autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
 </video>
 
@@ -15,6 +15,6 @@
 <img src="./resources/images/camp.jpg"/>
 <img src="./resources/images/phone.png"/>
 <h2>Coming Soon for iPhone and Android</h2>
-<p>Downlad Excursion (Coming soon!)</p>
+<p><a href="#download">Download Excursion (Coming soon!)</a></p>
 </body>
 </html>
