Update download id

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Discover hidden places in the world around you</h1>
-<p><div id="download">Download Excursion (Coming soon!)<div></p>
+<p><div id="download">Download Excursion (Coming soon!)</div></p>
 <video autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
 </video>
 
