--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 </head>
 <body>
 <h1>Discover hidden places in the world around you</h1>
-<p><div id="download">Download Excursion (Coming soon!)</div></p>
-<video autoplay src="./resources/videos/excursion.mp4" type="video/mp4">
+<div><a href id="download" class="downland">Download Excursion (Coming soon!)</a></div>
+<video autoplay loop src="./resources/videos/excursion.mp4" type="video/mp4">
 </video>
 
 <h2>Your personal travel guide</h2>
-<p>Excursion remebers places you like, and recommends new points of interest around you.</p>
-<img src="./resources/images/camp.jpg"/>
-<img src="./resources/images/phone.png"/>
+<br\>
+<div><p class="moto">Excursion remebers places you like, and recommends new points of interest around you.</p></div>
+<div><img src="./resources/images/camp.jpg"/></div>
+<p></p>
+<div><img src="./resources/images/phone.png"/></div>
 <h2>Coming Soon for iPhone and Android</h2>
-<p><a href="#download">Download Excursion (Coming soon!)</a></p>
+<div><a href="#download" class="download">Download Excursion (Coming soon!)</a></div>
+<p class="copyright">©  Excursion</p>
 </body>
 </html>
